--- a/main/plugins/org.talend.designer.core/src/main/java/messages.properties
+++ b/main/plugins/org.talend.designer.core/src/main/java/messages.properties
@@ -1047,3 +1047,10 @@ ProjectAnalysisTask.invalidaProperties=The properties file is not valid and can'
 ProjectAnalysisTask.duplicatedItem={0} items have duplicated technical ID:{1}, only one of them can be loaded into Repository view.
 ProjectAnalysisTask.taskName=InvalidItemsAnalysisTask
 ProjectAnalysisTask.taskDescription=Check if items in current project are valid.
+guessSchema.error=Error occurred during guessing schema.
+guessSchema.error.empty=Guess schema failed, no error message returned from the guess schema execution.
+guessSchema.dialog.title=Schema of {0}
+guessSchema.dialog.error.title=Guess Schema Failed.
+guessSchema.dialog.error.msg.default=Guess schema failed, please check logs.
+guessSchema.dialog.info.NoSchema.title=Empty Schema.
+guessSchema.dialog.info.NoSchema.msg=No record found. The schema can't be guessed.
